--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
     "form-serialize": "^0.7.1",
+    "material-ui": "^0.18.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0"
   },
   "scripts": {
